<resources>
    <string name="app_name">JavaAndroidApp</string>

    <string name="enter_inform">Enter information</string>
    <string name="artist_name">Artist name</string>
    <string name="album_name">Album name</string>
    <string name="duration">Duration</string>
    <string name="release_date">Release date</string>
    <string name="country">Country</string>
    <string name="genre">Genre</string>
    <string name="no_info">No information yet</string>
    <string name="preview">Testtesttest</string>
    <string name="hint_search">Search…</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
