<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.InfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".InfoActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/background_view"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:background="@drawable/grad">
            </ImageView>

            <ImageView
                android:id="@+id/track_image"
                android:layout_marginTop="50dp"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_person_black_24dp"
                 />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:id="@+id/info_track_name"
            android:text="@string/no_info"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/track_name_info_text_size"
            android:gravity="top"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/info_layout"
                android:layout_marginTop="@dimen/vertical_margin"
                android:paddingStart="@dimen/border_margin_info"
                android:paddingEnd="@dimen/border_margin_info"
                android:weightSum="4"
                android:paddingBottom="@dimen/border_margin"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin_info"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_person_black_24dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/vertical_margin"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/artist_name"
                            android:textSize="@dimen/text_size_info_description"
                            android:textColor="@color/colorAccentLight"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/artist_name"
                            android:text="@string/no_info"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/text_size_info"
                            android:gravity="top"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin_info"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_album_black_24dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/vertical_margin"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/album_name"
                            android:textSize="@dimen/text_size_info_description"
                            android:textColor="@color/colorAccentLight"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/album_name"
                            android:text="@string/no_info"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/text_size_info"
                            android:gravity="top"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin_info"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_timer_black_24dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/vertical_margin"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/duration"
                            android:textSize="@dimen/text_size_info_description"
                            android:textColor="@color/colorAccentLight"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/duration"
                            android:text="@string/no_info"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/text_size_info"
                            android:gravity="top"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin_info"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_insert_invitation_black_24dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/vertical_margin"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/release_date"
                            android:textSize="@dimen/text_size_info_description"
                            android:textColor="@color/colorAccentLight"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/release_date"
                            android:text="@string/no_info"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/text_size_info"
                            android:gravity="top"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin_info"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_language_black_24dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/vertical_margin"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/country"
                            android:textSize="@dimen/text_size_info_description"
                            android:textColor="@color/colorAccentLight"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/country"
                            android:text="@string/no_info"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/text_size_info"
                            android:gravity="top"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin_info"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_queue_music_black_24dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/vertical_margin"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/genre"
                            android:textSize="@dimen/text_size_info_description"
                            android:textColor="@color/colorAccentLight"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/genre"
                            android:text="@string/no_info"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/text_size_info"
                            android:gravity="top"/>
                    </LinearLayout>

                </LinearLayout>



            </LinearLayout>

        </ScrollView>



    </LinearLayout>

</FrameLayout>